<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".reports.MonthlyReportForDiscardedProcessedFoodPackagesWithOctagonsByBrandFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_layout_spinner_month"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/txt_layout_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.mbm.alimentosprocesados.customviews.ExposedDropdownMenu
            android:id="@+id/spinner_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mes"
            android:importantForAccessibility="no"
            android:inputType="none"
            app:simpleItems="@array/months_array" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_layout_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@id/btn_search"
        app:layout_constraintStart_toEndOf="@id/txt_layout_spinner_month"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_Text_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/anio"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/buscar"
        app:layout_constraintBaseline_toBaselineOf="@id/txt_layout_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_layout_year"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_layout_year"
        tools:visibility="invisible" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/failure_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_failure"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_layout_year"
        tools:visibility="invisible" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/no_data_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_no_results"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_layout_year"
        tools:visibility="invisible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/report_tittle_3"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_layout_year"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_num_packaging"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_report"
        tools:text="Número de empaques analizados: 500" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_brand"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_num_packaging"
        tools:listitem="@layout/item_packaging_food_brand"/>
</androidx.constraintlayout.widget.ConstraintLayout>